Add images for skills

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>This site is <strong>in development</strong>.</h2>
+							<h2>What I <b>specialize in</b></h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/featured-electronics.jpg" alt="" /></a>
 										<header>
 											<h3>Feature 1</h3>
 										</header>
@@ -70,7 +70,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/featured-sysadmin.jpg" alt="" /></a>
 										<header>
 											<h3>Feature 2</h3>
 										</header>
@@ -82,7 +82,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/featured-software.jpg" alt="" /></a>
 										<header>
 											<h3>Feature 3</h3>
 										</header>
